ui/src/components/Markdown/Markdown.css
.content {
    @apply prose max-w-none;
    @apply prose-ul:my-0 prose-li:p-0 prose-li:my-0;
    @apply dark:prose-invert;

    li > p {
        @apply my-0;
    }

    h5 {
        @apply font-bold mt-6;
    }

    :where(h5 + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
        margin-top: 0;
    }

    h6 {
        @apply font-semibold underline mt-6;
    }

    :where(h6 + *):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
        margin-top: 0;
    }

    .table-wrapper {
        @apply border border-subtle rounded-lg overflow-x-auto mt-4 mb-6;
        @apply border-subtle-extra-dark;
        table {
            margin: 0;
        }
    }

    table {
        @apply border-collapse;
    }

    thead {
        @apply font-semibold bg-subtle-light;
        @apply dark:bg-subtle-extra-dark;
    }

    td {
        @apply p-2 border-x border-subtle;
        @apply border-subtle-extra-dark;

        &:first-child {
            @apply border-l-0;
        }

        &:last-child {
            @apply border-r-0;
        }
    }

    :where(code):not(pre > code) {
        @apply bg-sidebar;
    }

    :where(code):not(
            :where([class~="not-prose"], [class~="not-prose"] *)
        )::before {
        content: "";
    }

    :where(code):not(
            :where([class~="not-prose"], [class~="not-prose"] *)
        )::after {
        content: "";
    }
}

